tests/invalid/bytes_wrong_arg_count/main.py
x: bytes = bytes(1, 2)
